fix: allow browser to break words in labels, headers, and paragraphs instead over overflowing

--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -174,6 +174,28 @@
       }
     }
 
+    &.header-field {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        word-break: break-word;
+      }
+    }
+
+    &.paragraph-field {
+      p {
+        word-break: break-word;
+      }
+    }
+
+    .field-label {
+      display: block;
+      overflow-wrap: break-word;
+    }
+
     &.button-field,
     &.header-field,
     &.paragraph-field {
